--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.29.0",
     "vite-plugin-remove-console": "^2.2.0",
-    "zod": "^3.24.1"
+    "zod": "^3.24.1",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
