--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
-    "vite": "^6.1.0"
+    "vite": "^6.1.0",
+    "vite-plugin-optimize-image": "^1.0.2"
   }
 }
