--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
+    "vite-plugin-mkcert": "^1.17.6",
     "vite-plugin-optimize-image": "^1.0.2"
   }
 }
