--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "npm": "^10.9.2",
     "path": "^0.12.7",
     "react": "^19.0.0",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.29.0",
