배포테스트2

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 # rm : 컨테이너 삭제
 # rmi : 컨테이너 이미지 삭제
 # -d : 백그라운드에서 실행
-# -p 80:80 : 호스트의 포트(80)을 컨테이너의 포트(80)과 연결
+# -p 80:80 : 호스트의 포트(80)을 컨테이너의 포트(80)과 연결!
 
 # 파이프라인 단계 정의
 stages:
