--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ server {
         try_files $uri /index.html;
     }
 
-    # api proxy
+    # api proxy //
     # location /api/ {
     #     proxy_pass http://accommodation-server:8080;
     # }
