--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.29.0",
+    "socket.io-client": "^4.8.1",
     "vite-plugin-remove-console": "^2.2.0",
     "zod": "^3.24.1",
     "zustand": "^5.0.3"
