--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "typescript-eslint": "^8.22.0",
     "vite": "^6.1.0",
     "vite-plugin-mkcert": "^1.17.6",
-    "vite-plugin-optimize-image": "^1.0.2"
+    "vite-plugin-optimize-image": "^1.0.2",
+    "vite-plugin-svgr": "^4.3.0"
   }
 }
