chore: assets 절대 경로 설정

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       "@components/": ["./components/"],
       "@pages/": ["./pages/"],
       "@utils/": ["./utils/"],
-    },
+      "@assets/": ["./assets/"]
+    }
   }
 }
