--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query-devtools": "^5.66.0",
     "@types/node": "^22.13.1",
     "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
     "install": "^0.13.0",
     "npm": "^10.9.2",
     "path": "^0.12.7",
